<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="application_name">Lizheblogs-git</string>
   <string name="shared_user_label">Termux user</string>
   <string name="new_session">New session</string>
   <string name="new_session_failsafe">Failsafe</string>
   <string name="toggle_soft_keyboard">Keyboard</string>
   <string name="reset_terminal">Reset</string>
   <string name="style_terminal">Style</string>
   <string name="share_transcript_title">Terminal transcript</string>
   <string name="help">Help</string>

   <string name="bootstrap_installer_body">Installing…</string>
   <string name="bootstrap_error_title">Unable to install</string>
   <string name="bootstrap_error_body">Termux was unable to install the bootstrap packages.\n\nCheck your network connection and try again.</string>
   <string name="bootstrap_error_abort">Abort</string>
   <string name="bootstrap_error_try_again">Try again</string>
   <string name="bootstrap_error_not_primary_user_message">Termux can only be installed on the primary user account.</string>

   <string name="max_terminals_reached_title">Max terminals reached</string>
   <string name="max_terminals_reached_message">Close down existing ones before creating new.</string>

   <string name="reset_toast_notification">Terminal reset.</string>

  <string name="select_url">Select URL</string>
  <string name="select_url_dialog_title">Click URL to copy or long press to open</string>
  <string name="select_all_and_share">Share transcript</string>
  <string name="select_url_no_found">No URL found in the terminal.</string>
  <string name="select_url_copied_to_clipboard">URL copied to clipboard</string>
  <string name="share_transcript_chooser_title">Send text to:</string>

  <string name="kill_process">Kill process (%d)</string>
  <string name="confirm_kill_process">Really kill this session?</string>

  <string name="session_rename_title">Set session name</string>
  <string name="session_rename_positive_button">Set</string>
  <string name="session_new_named_title">New named session</string>
  <string name="session_new_named_positive_button">Create</string>

  <string name="styling_not_installed">The Termux:Style add-on is not installed.</string>
  <string name="styling_install">Install</string>

  <string name="notification_action_exit">Exit</string>
  <string name="notification_action_wake_lock">Acquire wakelock</string>
  <string name="notification_action_wake_unlock">Release wakelock</string>

  <string name="file_received_title">Save file in ~/downloads/</string>
  <string name="file_received_edit_button">Edit</string>
  <string name="file_received_open_folder_button">Open folder</string>
    <string name="select">SELECT</string>
    <string name="file_path">File path</string>
    <string name="content">Content</string>
    <string name="save">SAVE</string>
    <string name="done">DONE</string>
    <string name="up"><![CDATA[<--]]></string>
    <string name="down"><![CDATA[-->]]></string>

</resources>
