<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="5dp">

        <Button
            android:id="@+id/saveBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@+id/addressET"
            app:layout_constraintTop_toTopOf="@+id/addressET" />

        <EditText
            android:id="@+id/addressET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/file_path"
            app:layout_constraintLeft_toRightOf="@+id/saveBut"
            app:layout_constraintRight_toLeftOf="@+id/selectBut"
            android:padding="5dp"/>

        <Button
            android:id="@+id/selectBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            app:layout_constraintBottom_toBottomOf="@+id/addressET"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addressET" />

        <EditText
            android:id="@+id/textET"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="start|top"
            android:hint="@string/content"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressET" />

    </android.support.constraint.ConstraintLayout>

</layout>
